force-app/main/default/objects/OrderItem/fields/FOPS_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Assignment__c</fullName>
    <label>Assignment</label>
    <referenceTo>FOPS_Assignment__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>FOPS_InvoiceLines</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>