force-app/main/default/objects/OrderItem/fields/FOPS_Description__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Description__c</fullName>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>