force-app/main/default/objects/OrderItem/fields/FOPS_Line_Total_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Line_Total_Base__c</fullName>
    <label>Line Total (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>