force-app/main/default/objects/OrderItem/fields/FOPS_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Line_Type__c</fullName>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time</fullName>
                <default>true</default>
                <label>Time</label>
            </value>
            <value>
                <fullName>Fixed Fee / Milestone</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>