force-app/main/default/objects/OrderItem/fields/FOPS_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Timesheet__c</fullName>
    <label>Timesheet</label>
    <referenceTo>FOPS_Timesheet__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>FOPS_InvoiceLines</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>