force-app/main/default/objects/OrderItem/fields/FOPS_Unit__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>